--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -66,12 +66,13 @@ div {
 	float: left;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
-	height: 120px;
+	height: 100%;//120px;
 	line-height: 24px;
+	padding: 5px 3px;
 	position: relative;
 	text-align: center;
 	vertical-align: middle;
-	width: 100%;
+	width: 99%;
 }
 .footer {
 	background-color: $white;
@@ -80,8 +81,8 @@ div {
 	display: block;
 	float: left;
 	font-size: 12px;
-	height: 30px;
-	padding: 10px 0 0 0;
+	height: 50px;
+    padding: 30px 0 0 0;
 	position: relative;
 	text-align: center;
 	vertical-align: middle;
@@ -122,7 +123,7 @@ div {
 .content {
 	border: 1px solid $darkGrey;
 	box-shadow: 0px 4px 5px $dullGrey;
-	height: 380px;
+	height: 100%;//380px;
 	margin: 0 0 60px 0;
 	overflow: hidden;
 	width: auto;
