--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -123,7 +123,7 @@ div {
 .content {
 	border: 1px solid $darkGrey;
 	box-shadow: 0px 4px 5px $dullGrey;
-	height: 100%;//380px;
+	height: auto;//100%;//380px;
 	margin: 0 0 60px 0;
 	overflow: hidden;
 	width: auto;
